Finished account page related server implementation
